Development
	Add gconf key /apps/gnome-mplayer/preferences/disablecontextmenu to set default value of --disablecontextmenu
	Add gconf key /apps/gnome-mplayer/preferences/disablefullscreen to set default value of --disablefullscreen
	Add commandline option "--disablefullscreen", which disables all fullscreen options
	Purge GtkWidget 'song_title', not used anymore
	Add subtitle delay hotkeys of z & x
	Fix problem with CD playback where either CDDB can't be reached or CD not found
	Hopefully fix the code so it can compile on FreeBSD
	Detect mntent.h in configure process
	Fix crash when mplayer is not in the path
	Version bump
	Updated pt_BR translation
	Try to prevent crash when viewing file details from a tv input
	Apply patches from James Carthew for Analog and Digital TV support
	Implement audio delay changes with +/- keys
0.6.0
	Updated Polish and Korean translations
	Only respect --showplaylist if no files are specified
	Fix a GTK warning when playlist is not visible
	Make sure playlist is only shown when not embedded
	Add some more code for proper handling of plural messages
	Add Edit->Preferences [Advanced] options for --vertical and --showplaylist
	Fix problem with fullscreen varible being set to FALSE when it should not be
	Implemented ngettext support for plural items
	Keep the selected item in the playlist visible as the playlist progresses
	Change bitrate calculation when video is present, but mplayer reports the video bitrate as 0
	Update the metadata when the media is streaming in thread_query
	Implement get_bitrate dbus method and function
	Add --showplaylist commandline option
	Make sure media label is visible on audio only files
	Couple of playlist window resize changes
	Add commandline option --vertical, which uses a vertical layout for the video and playlist
	Fix bug where video window doesn't disappear when playing audio file after video file
	Fix bug where only first drag and dropped file got metadata
	Move thread unlock to very end of the thread.