@@ -1,4 +1,5 @@
 Development
+	Fix install code so that gnome-mplayer.schema is properly installed when installing from source
 	Add gconf key /apps/gnome-mplayer/preferences/disablecontextmenu to set default value of --disablecontextmenu
 	Add gconf key /apps/gnome-mplayer/preferences/disablefullscreen to set default value of --disablefullscreen
 	Add commandline option "--disablefullscreen", which disables all fullscreen options
